--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,30 @@ table {
     text-transform: uppercase;
     line-height: 29px;
     color: #F16D7F; }
+  .name-page__block-caption--flex {
+    justify-content: space-between; }
+    @media screen and (max-width: 481px) {
+      .name-page__block-caption--flex {
+        flex-direction: column;
+        justify-content: space-evenly; } }
+  .name-page__breadcrumbs {
+    display: flex; }
+  .name-page__path-breadcrumbs {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17px;
+    color: #767575;
+    text-decoration: none;
+    text-transform: uppercase; }
+  .name-page__separator-breadcrumbs {
+    margin: 0 5px;
+    color: #767575; }
+  .name-page__sub-caption {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: #F16D7F; }
 
 .registration {
   padding: 64px 16px 96px 16px;
@@ -913,5 +937,406 @@ table {
         font-size: 13px;
         font-weight: 300;
         line-height: 16px; } }
+
+.product-slider {
+  background: #F4F3F1;
+  border-top: 1px solid #EAEAEA;
+  border-bottom: 1px solid #EAEAEA; }
+  .product-slider__block {
+    position: relative; }
+    .product-slider__block button {
+      position: absolute;
+      width: 47px;
+      height: 47px;
+      background: rgba(42, 42, 42, 0.15);
+      transition: .3s;
+      text-align: center; }
+    .product-slider__block .slick-prev {
+      left: 0;
+      z-index: 1; }
+    .product-slider__block .slick-next {
+      right: 0; }
+    .product-slider__block .slick-prev::before {
+      content: '';
+      display: block;
+      width: 14px;
+      height: 3px;
+      background: #000;
+      -moz-transform: rotate(-45deg) translate(1px, 1px);
+      -webkit-transform: rotate(-45deg) translate(1px, 1px);
+      -o-transform: rotate(-45deg) translate(1px, 1px);
+      -ms-transform: rotate(-45deg) translate(1px, 1px);
+      transform: translate(16px, -3px) rotate(-45deg); }
+    .product-slider__block .slick-prev::after {
+      content: '';
+      display: block;
+      width: 14px;
+      height: 3px;
+      background: #000;
+      -moz-transform: rotate(45deg) translate(1px, 1px);
+      -webkit-transform: rotate(45deg) translate(1px, 1px);
+      -o-transform: rotate(45deg) translate(1px, 1px);
+      -ms-transform: rotate(45deg) translate(1px, 1px);
+      transform: translate(16px, 3px) rotate(45deg); }
+    .product-slider__block .slick-next::before {
+      content: '';
+      display: block;
+      width: 14px;
+      height: 3px;
+      background: #000;
+      -moz-transform: rotate(-45deg) translate(1px, 1px);
+      -webkit-transform: rotate(-45deg) translate(1px, 1px);
+      -o-transform: rotate(-45deg) translate(1px, 1px);
+      -ms-transform: rotate(-45deg) translate(1px, 1px);
+      transform: translate(18px, -3px) rotate(45deg); }
+    .product-slider__block .slick-next::after {
+      content: '';
+      display: block;
+      width: 14px;
+      height: 3px;
+      background: #000;
+      -moz-transform: rotate(45deg) translate(1px, 1px);
+      -webkit-transform: rotate(45deg) translate(1px, 1px);
+      -o-transform: rotate(45deg) translate(1px, 1px);
+      -ms-transform: rotate(45deg) translate(1px, 1px);
+      transform: translate(18px, 3px) rotate(-45deg); }
+    .product-slider__block .slick-prev:hover::before,
+    .product-slider__block .slick-next:hover::before,
+    .product-slider__block .slick-prev:hover::after,
+    .product-slider__block .slick-next:hover::after {
+      background: #E05C6E; }
+    .product-slider__block .slick-prev:hover, .product-slider__block .slick-prev:focus, .product-slider__block .slick-next:hover, .product-slider__block .slick-next:focus {
+      background: rgba(42, 42, 42, 0.15); }
+  .product-slider .slick-initialized .product-slider__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 11px 0 42px 0; }
+    .product-slider .slick-initialized .product-slider__item img {
+      max-width: 100%;
+      max-height: 720px; }
+
+.product-info {
+  max-width: 1140px;
+  margin: 0 auto; }
+  .product-info__block {
+    position: relative;
+    padding: 65px 0;
+    margin: -65px 0 0 0;
+    border: 1px solid #EAEAEA;
+    background: #fff;
+    text-align: center;
+    z-index: 1; }
+  .product-info__subcaption {
+    position: relative;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: #F16D7F;
+    padding: 0 0 15px 0; }
+  .product-info__subcaption::before {
+    content: '';
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: calc(50% - 31.5px);
+    width: 63px;
+    height: 3px;
+    background: #F16D7F; }
+  .product-info__caption {
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 22px;
+    text-transform: uppercase;
+    margin: 12px 0 0 0; }
+  .product-info__text {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17px;
+    color: #5E5E5E;
+    max-width: 555px;
+    margin: 48px auto 0 auto; }
+    @media screen and (max-width: 481px) {
+      .product-info__text {
+        padding: 0 23px; } }
+  .product-info__price {
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 29px;
+    color: #F16D7F;
+    margin: 32px auto 0 auto;
+    padding: 0 0 65px 0;
+    max-width: 641px;
+    border-bottom: 1px solid #EAEAEA; }
+    @media screen and (max-width: 481px) {
+      .product-info__price {
+        max-width: 174px;
+        padding: 0 0 32px 0; } }
+  .product-info__select-items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 65px auto 0 auto;
+    max-width: 373px; }
+    @media screen and (max-width: 481px) {
+      .product-info__select-items {
+        max-width: 100%;
+        margin: 49px auto 0 auto;
+        padding: 0 30px; } }
+  .product-info__select-item {
+    position: relative;
+    padding: 0 19px 0 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: #6F6E6E;
+    cursor: pointer; }
+    @media screen and (max-width: 481px) {
+      .product-info__select-item {
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 12px; } }
+  .product-info__select-item::before {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 4px;
+    top: calc(50% - 1px);
+    width: 6px;
+    height: 1px;
+    background: #6F6E6E;
+    transform: translate(0px, 1px) rotate(45deg); }
+    @media screen and (max-width: 481px) {
+      .product-info__select-item::before {
+        right: 10px; } }
+  .product-info__select-item::after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 0;
+    top: calc(50% - 1px);
+    width: 6px;
+    height: 1px;
+    background: #6F6E6E;
+    transform: translate(0px, 1px) rotate(-45deg); }
+    @media screen and (max-width: 481px) {
+      .product-info__select-item::after {
+        right: 6px; } }
+  .product-info__wrapper-button {
+    margin: 48px 0 0 0; }
+  .product-info__button-add-cart {
+    font-size: 16px;
+    line-height: 19px;
+    margin: 0 auto;
+    width: 211px;
+    height: 47px;
+    border-color: #FF6A6A;
+    color: #FF6A6A;
+    justify-content: space-evenly; }
+    .product-info__button-add-cart--icon-cart {
+      fill: #EF5B70; }
+
+.product-products {
+  padding: 129px 0; }
+  @media screen and (max-width: 481px) {
+    .product-products {
+      padding: 64px 0; } }
+  .product-products__wrapper {
+    margin: 0; }
+
+.catalog-filter__wrapper-filter {
+  display: flex;
+  padding: 51px 0 65px 0; }
+  @media (max-width: 768px) {
+    .catalog-filter__wrapper-filter {
+      justify-content: space-between; } }
+  @media screen and (max-width: 481px) {
+    .catalog-filter__wrapper-filter {
+      align-items: center; } }
+.catalog-filter__filter-category {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer; }
+.catalog-filter__filter-category:hover .catalog-filter__name-filter, .catalog-filter__filter-category:hover .catalog-filter__icon-filter {
+  color: #EF5B70;
+  fill: #EF5B70; }
+.color-pink__active-icon .catalog-filter__name-filter, .color-pink__active-icon .catalog-filter__icon-filter {
+  color: #EF5B70;
+  fill: #EF5B70;
+  margin: 0 0 0 16px; }
+@media screen and (max-width: 481px) {
+  .color-pink__active-icon .catalog-filter__icon-wrapper {
+    margin: 0 0 0 17px; } }
+.catalog-filter__submenu-category {
+  display: none;
+  position: absolute;
+  top: -13px;
+  width: 360px;
+  background: #fff;
+  padding: 46px 17px 17px 17px;
+  z-index: 1;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21); }
+  @media screen and (max-width: 481px) {
+    .catalog-filter__submenu-category {
+      width: 284px;
+      box-sizing: border-box;
+      padding-top: 55px; } }
+.catalog-filter__submenu-category.display__block {
+  display: block; }
+.catalog-filter__name-filter {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  text-transform: uppercase;
+  margin: 0 0 0 16px;
+  z-index: 2; }
+  @media (max-width: 768px) {
+    .catalog-filter__name-filter {
+      margin: 0; } }
+  @media screen and (max-width: 481px) {
+    .catalog-filter__name-filter {
+      display: none; } }
+.catalog-filter__icon-wrapper {
+  margin: 0 0 0 11px;
+  z-index: 2; }
+  @media screen and (max-width: 481px) {
+    .catalog-filter__icon-wrapper {
+      width: 38px;
+      height: 25px;
+      margin: 0; } }
+.catalog-filter__submenu-caption {
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+  color: #6F6E6E;
+  line-height: 37px;
+  height: 37px;
+  margin: 0 0 19px 0;
+  padding: 0 0 0 11px;
+  border-left: 5px solid #EF5B70;
+  border-bottom: 1px solid #EBEBEB; }
+  .catalog-filter__submenu-caption--active {
+    color: #EF5B70; }
+.catalog-filter__submenu-item:last-child .catalog-filter__submenu-caption {
+  margin: 0; }
+.catalog-filter__submenu-nav-items {
+  margin: 6px 0 24px 12px; }
+.catalog-filter__submenu-nav-item {
+  margin: 0 0 11px 0; }
+.catalog-filter__submenu-nav-link {
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+  text-decoration: none; }
+.catalog-filter__filter-size {
+  margin: 0 0 0 304px; }
+  @media (max-width: 768px) {
+    .catalog-filter__filter-size {
+      margin: 0; } }
+.catalog-filter__size-filter-wrapper {
+  margin: 0; }
+  @media screen and (max-width: 481px) {
+    .catalog-filter__size-filter-wrapper {
+      padding: 0; } }
+.catalog-filter__select-item {
+  position: relative;
+  margin: 0 28px 0 0; }
+  @media screen and (max-width: 481px) {
+    .catalog-filter__select-item {
+      font-size: 12px;
+      line-height: 14px;
+      margin: 0 8px 0 0; } }
+@media (max-width: 768px) {
+  .catalog-filter__select-item:last-child {
+    margin: 0; } }
+.catalog-filter__list-check-size {
+  position: absolute;
+  display: none;
+  box-sizing: border-box;
+  width: 79px;
+  padding: 10px;
+  left: -10px;
+  margin: 4px 0 0 0;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  background: #fff;
+  z-index: 1; }
+.catalog-filter__select-item .catalog-filter__list-check-size.display__block {
+  display: block; }
+.catalog-filter__list-check-item {
+  display: flex;
+  align-items: center;
+  margin: 0 0 6px 0; }
+  .catalog-filter__list-check-item input {
+    position: relative;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -o-appearance: none;
+    outline: none;
+    content: none; }
+  .catalog-filter__list-check-item input::before {
+    content: '';
+    display: block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #EBEBEB;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px; }
+  .catalog-filter__list-check-item input:checked:before {
+    background: #E05C6E; }
+  .catalog-filter__list-check-item span {
+    font-size: 14px;
+    line-height: 16px;
+    margin: 0 0 0 7px; }
+.catalog-filter__list-check-item:last-child {
+  margin: 0; }
+
+.catalog-products {
+  padding: 0 0 47px 0; }
+  .catalog-products .products__wrapper {
+    margin: 0; }
+
+.catalog-pagination {
+  margin: 0 0 96px 0; }
+  .catalog-pagination__wrapper {
+    position: relative;
+    box-sizing: border-box;
+    width: 283px;
+    height: 42px;
+    margin: 0 auto;
+    padding: 0 42px;
+    border: 1px solid #EBEBEB;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px; }
+  .catalog-pagination__items {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin: 0 -9px; }
+  .catalog-pagination__item {
+    flex: 1 1 33.333%;
+    margin: 0 9px;
+    text-align: center; }
+    .catalog-pagination__item:hover {
+      cursor: pointer; }
+    .catalog-pagination__item--dotted {
+      margin: 0 -9px 0 -9px; }
+  .catalog-pagination__item-number {
+    color: #C4C4C4; }
+    .catalog-pagination__item-number--active {
+      color: #EF5B70; }
+  .catalog-pagination__arrow {
+    position: absolute;
+    cursor: pointer; }
+    .catalog-pagination__arrow--left {
+      left: 16px;
+      top: calc(50% - 7px); }
+    .catalog-pagination__arrow--right {
+      right: 16px;
+      top: calc(50% - 7px); }
 
 /*# sourceMappingURL=style.css.map */
