--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,8 @@
 @import './blocks/perks';
 @import './blocks/cart';
 // End import blocks desctop
+
+// Start import page style
+@import './pages/product';
+@import './pages/catalog';
+// Start import page style
