--- a/scss/blocks/_name-page.scss
+++ b/scss/blocks/_name-page.scss
@@ -17,5 +17,38 @@
         line-height: 29px;
         color: $pink-color-caption;
     }
+
+    &__block-caption {
+		&--flex {
+            justify-content: space-between;
+
+            @include mobile-landscape-style() {
+                flex-direction: column;
+                justify-content: space-evenly;
+            }
+        }
+	}
+
+	&__breadcrumbs {
+        display: flex;
+    }
+
+	&__path-breadcrumbs {
+        @include font(14px, 300, 17px);
+        color: #767575;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+
+	&__separator-breadcrumbs {
+        margin: 0 5px;
+        color: #767575;
+    }
+
+	&__sub-caption {
+        @include font(14px, 700, 17px);
+        text-transform: uppercase;
+        color: $pink-color-caption;
+    }
 }
 
